--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1>ChuongMEP Blog</h1>
     <input type="text" id="search" placeholder="Search posts..." />
     <ul id="post-list"></ul>
+    <button id="back-button" class="back-button" style="display:none;">Back</button>
+    <button id="next-button" class="next-button" style="display:none;">Next</button>
     <div id="post-content"></div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
